# cfiles-engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Model.cpp  README.md  TASKS.md  TODO.rst
.cache/clangd/index/: EBO.cpp.9B9D3B120296BF06.idx  EBO.h.34FDAEA0A85299D3.idx  VAO.cpp.F50BD5FA0024C380.idx  VAO.h.ADC3AED382889233.idx  VBO.cpp.0F2E8AAE9F0D20E7.idx  VBO.h.F3B117E2C956D415.idx  boot.c.BA7747FEED297419.idx  camera.cpp.398EEA8F1D1478F1.idx  camera.h.26C12045EDE1956F.idx  debug.cpp.5D0B5058203B5DC6.idx  debug.h.107B2D6B704DC24E.idx  fe-kernel.h.2E4B5426D3F705EB.idx  fe-settings.h.01294E83AFA96C1A.idx  glad.c.EEAF2C5ACFC0E84F.idx  glad.h.BADEF26D98362ED9.idx  json.h.BF7BEA4790BD9A96.idx  khrplatform.h.19E23E3DB79F3149.idx  main.cpp.8F8B9776D9D51445.idx  mesh.cpp.EE66198736AE0D96.idx  mesh.h.4C31D0DB39A08EC1.idx  model.cpp.51BCA5760C9B80A2.idx  model.h.FD73FA7646304A47.idx  shader.cpp.7265CAA2031D2F60.idx  shader.h.264B983A33872DA2.idx  stb.cpp.353B19395A632C67.idx  stb_image.h.13BB286DB9AE6818.idx  texture.cpp.9AD70845C8556D83.idx  texture.h.4D05B81A807D56A6.idx  window.cpp.5B2074E5D79FA548.idx  window.h.AE7290113F2660A4.idx
assets/models/plane/: scene.gltf
assets/models/vec3arr/: scene.gltf  scene.json
cfe-redactor/src/: noclip.cpp
fe-headers/: EBO.h  FBO.h  VAO.h  VBO.h  camera.h  console.h  debug.h  fe-commands.h  fe-includes.h  fe-kernel.h  fe-logic.h  fe-settings.h  input.h  main.h  mesh.h  model.h  physics.h  rayCollision.h  scriptManager.h  shader.h  testApp.h  textRenderer.h  texture.h  window.h
shaders/: outline_shader.glsl  pickingShader.glsl  pickingShadertest.glsl  shader_def.glsl  shader_txt.glsl
src/: EBO.cpp  FBO.cpp  VAO.cpp  VBO.cpp  boot.c  camera.cpp  console.cpp  debug.cpp  input.cpp  main.cpp  mesh.cpp  model.cpp  physic.cpp  rayCollision.cpp  scriptManager.cpp  shader.cpp  testApp.cpp  textRenderer.cpp  texture.cpp  window.cpp
zig/fe-logic/: build.sh  build.zig  build.zig.zon
zig/fe-logic/.zig-cache/o/88cc44b8a97c866746f19eb04152e7b5/: cimport.zig
zig/fe-logic/.zig-cache/o/b900194ab5c5d67d9bfc0954074f5e9f/: cimport.h.d
zig/fe-logic/src/: main.zig
